css/main.css
html {
  box-sizing: border-box;
  line-height: 1.5;
  background-color: #eee9de;
  max-width: 25em;
}

*, *::before, *::after {
  box-sizing: inherit;
}

section {
  display: inline-block;
}

h2 {
  text-align: center;
  font-family: Lato, sans-serif;
  font-weight: bold;
  color: #333;
  padding-top: 1em;
  margin-bottom: 1em;
}

div {
  font-family: Lato, sans-serif;
  text-align: left;
  color: #333;
}

img {
  vertical-align: middle;
  margin-top: 1.5rem;
  max-width: 25em;
  display: block;
  width: 25em;
}

body {
  font-family: Lato, sans-serif;
  color: #333;
  margin: 1rem;
}

a {
  padding: .4em .75em;
  border-radius: .4em;
  text-decoration: none;
  border: .4em solid #666;
  color: #333;
}

a:hover {
  background-color: #666;
  color: #eee9de;
}

p {
  max-width: 25em;
  margin-bottom: 1.5em;
}

.btn {
  display: inline-block;
}

